[gd_scene load_steps=16 format=3 uid="uid://c4rt0pnhv86kl"]

[ext_resource type="Script" path="res://src/Actors/Enemies/TRex.gd" id="1_krotj"]
[ext_resource type="Texture2D" uid="uid://cyd4bsfqi7at3" path="res://src/Actors/Enemies/TRex/trex-turn.png" id="2_b0ppb"]
[ext_resource type="Texture2D" uid="uid://cx8elq1hasfcf" path="res://src/Actors/Enemies/TRex/trex-idle.png" id="2_fy7u7"]
[ext_resource type="Texture2D" uid="uid://do0w43nvowi10" path="res://src/Actors/Enemies/TRex/trex-damaged.png" id="2_o6g7j"]
[ext_resource type="Script" path="res://src/Actors/Enemies/TRexStateMachine.gd" id="3_s8b5v"]
[ext_resource type="Script" path="res://src/Actors/Enemies/TRex/StateIdle.gd" id="4_m62k6"]
[ext_resource type="Script" path="res://src/Actors/Enemies/TRex/StateWalking.gd" id="5_hhe6l"]
[ext_resource type="Script" path="res://src/Actors/Enemies/TRex/StateTurn.gd" id="6_giupj"]
[ext_resource type="Script" path="res://src/Actors/Enemies/StateDamaged.gd" id="8_bfywx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rkmhm"]

[sub_resource type="Animation" id="Animation_rhii5"]
resource_name = "Idle"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fy7u7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_64fgd"]
resource_name = "Turn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_b0ppb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_noxqi"]
resource_name = "Walking"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_fy7u7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7wfsr"]
resource_name = "Damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_o6g7j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73yow"]
_data = {
"Damaged": SubResource("Animation_7wfsr"),
"Idle": SubResource("Animation_rhii5"),
"Turn": SubResource("Animation_64fgd"),
"Walking": SubResource("Animation_noxqi")
}

[node name="TRex" type="CharacterBody2D"]
script = ExtResource("1_krotj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -16)
shape = SubResource("CapsuleShape2D_rkmhm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, -32)
texture = ExtResource("2_fy7u7")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_73yow")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animationPlayer", "actor")]
script = ExtResource("3_s8b5v")
animationPlayer = NodePath("../AnimationPlayer")
actor = NodePath("..")

[node name="StateIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_m62k6")
can_move = true
animation_name = "Idle"

[node name="StateWalking" type="Node" parent="StateMachine"]
script = ExtResource("5_hhe6l")
can_move = true
animation_name = "Walking"

[node name="StateTurn" type="Node" parent="StateMachine"]
script = ExtResource("6_giupj")
animation_name = "Turn"

[node name="StateDamaged" type="Node" parent="StateMachine"]
script = ExtResource("8_bfywx")
animation_name = "Damaged"
